--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -2699,6 +2699,9 @@ th {
 		margin: 2px 15px 0 0;
 		fill: $gray;
 	}
+	&.ta-right{
+		float: right;
+	}
 }
 
 .display-table {
